# acme-cadadr

./: acme-cadadr.cabal
.github/workflows/: haskell-ci.yml
src/Optics/: CADADR.hs
